--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -37,4 +37,5 @@ $modal-z-index: 11;
 @font-face {
   font-family: chosunilbomyungjo;
   src: url(./font/chosun_ilbo_myungjo.woff) format('woff');
+  font-display: swap;
 }
